# dubportal

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: update.yml  update_web.yml
docs/: index.html  network_index.json
docs/ATXN3/: index.html
docs/ATXN3L/: index.html
docs/BAP1/: index.html
docs/BRCC3/: index.html
docs/COPS5/: index.html
docs/COPS6/: index.html
docs/CYLD/: index.html
docs/EIF3F/: index.html
docs/EIF3H/: index.html
docs/JOSD1/: index.html
docs/JOSD2/: index.html
docs/MINDY1/: index.html
docs/MINDY2/: index.html
docs/MINDY3/: index.html
docs/MINDY4/: index.html
docs/MINDY4B/: index.html
docs/MPND/: index.html
docs/MYSM1/: index.html
docs/OTUB1/: index.html
docs/OTUB2/: index.html
docs/OTUD1/: index.html
docs/OTUD3/: index.html
docs/OTUD4/: index.html
docs/OTUD5/: index.html
docs/OTUD6A/: index.html
docs/OTUD6B/: index.html
docs/OTUD7A/: index.html
docs/OTUD7B/: index.html
docs/OTULIN/: index.html
docs/OTULINL/: index.html
docs/PAN2/: index.html
docs/PRPF8/: index.html
docs/PSMD14/: index.html
docs/PSMD7/: index.html
docs/STAMBP/: index.html
docs/STAMBPL1/: index.html
docs/TNFAIP3/: index.html
docs/UCHL1/: index.html
docs/UCHL3/: index.html
dubportal/: __main__.py  about.html  api.py  base.html  family_insights.html  gene.html  index.html  networks.py  overview.html  poorly_studied.html  prepare_dep_gsea.py  prepare_dgea.py  prepare_gsea.py  prepare_ko_dgea.py  prepare_ko_gsea.py  prepare_nursa.py  sources.html  statements_view.html  well_studied.html
(+73 files in other folders)
